# quactuary

./: .buildinfo  .gitignore  2025-05-26-overengineered-promising.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  coverage.json  coverage_report.txt  genindex.html  index.html  loc.json  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quactuary.backend.html  quactuary.distributions.html  quactuary.entities.html  quactuary.future.html  quactuary.html  quactuary.mcp.html  quactuary.memory_management.html  quactuary.parallel_processing.html  quactuary.pricing.html  quactuary.quantum.html  quactuary.utils.html  quactuary.vectorized_simulation.html  requirements-dev.txt  run_dev.py  search.html  searchindex.js  setup.py  sitemap.xml
.project_management/: 00_PROJECT_MANIFEST.md  CLAUDE.md
_sources/: index.rst.txt  modules.rst.txt  quactuary.backend.rst.txt  quactuary.distributions.rst.txt  quactuary.entities.rst.txt  quactuary.mcp.rst.txt  quactuary.memory_management.rst.txt  quactuary.quantum.rst.txt  quactuary.rst.txt  quactuary.utils.rst.txt
api_reference/: pricing_model.html
development/: code_standards.html  community_guidelines.html  contributing.html  documentation_guidelines.html  index.html  issue_reporting.html  mcp_development.html  performance_testing.html  setting_up_environment.html  submitting_changes.html  testing_guidelines.html
docs/: qmc_usage_guide.md
examples/: README.md  demo_front_page_examples.ipynb  demo_qae_simulation.ipynb  demo_quantum_actuarial_workflows.ipynb  demo_quantum_algorithms_framework.ipynb  (+16 more)
(+387 files in other folders)
