[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
write_to = "quactuary/_version.py"

[project]
name = "quactuary"
description = "Quantum-powered actuarial tools"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [ { name = "Alex Filiakov" } ]
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/AlexFiliakov/quactuary"
Repository = "https://github.com/AlexFiliakov/quactuary.git"

[tool.setuptools.packages.find]
where = ["quactuary"]
include = ["quactuary", "quactuary.*"]
